<resources>
    <string name="facebook_app_id" translatable="false">FILL_YOUR_OWN_KEY</string>
    <string name="navigation_drawer_open">"Open"</string>
    <string name="navigation_drawer_close">"Close"</string>
    <string name="action_settings">"Settings"</string>
    <string name="map_toolbar">"Map of stations"</string>
    <string name="tutorial_toolbar">"Tutorial"</string>
    <string name="hint_document">"NIF | NIE | Residence card | Pas"</string>
    <string name="hint_password">"Introduce password"</string>
    <string name="show_password">"Show password"</string>
    <string name="enter">"Enter"</string>
    <string name="register_login">"Are you signed in? Go on "</string>
    <string name="forget_password">"Have you forgotten your password?"</string>
    <string name="register_toolbar">"Register"</string>
    <string name="hint_name">"Name"</string>
    <string name="hint_first_surname">"First surname"</string>
    <string name="hint_second_surname">"Second surname"</string>
    <string name="hint_telephone">"Phone number"</string>
    <string name="hint_email">"E-mail"</string>
    <string name="hint_postal_code">"Zip code"</string>
    <string name="hint_date">"Date of birth"</string>
    <string name="age_title">"Age"</string>
    <string name="age_message">"You need to be over 14 years old to register"</string>
    <string name="menu_done">"Done"</string>
    <string name="error_no_name">"Introduce your name"</string>
    <string name="error_no_second_name">"Introduce your second surname"</string>
    <string name="error_no_first_name">"Introduce your first surname"</string>
    <string name="error_no_document">"Introduce your id number with a capital letter"</string>
    <string name="error_no_email">"Introduce a valid e-mail"</string>
    <string name="error_no_telephone">"Introduce your phone number"</string>
    <string name="error_no_postal_code">"Introduce a valid zip code with 5 numbers"</string>
    <string name="error_no_date">"Introduce your birth date"</string>
    <string name="error_no_password">"Introduce your password"</string>
    <string name="dialog_login_title">"Wait..."</string>
    <string name="dialog_login_message">"Entering with your MADBike account"</string>
    <string name="recover_password_instructions">"Introduce your id number and the e-mail address. You will get a new password in an e-mail"</string>
    <string name="send">"Send"</string>
    <string name="error_generic">"I don't expect to get this error! Please try again!"</string>
    <string name="dialog_recover_title">"One second"</string>
    <string name="dialog_recover_message">"Recovering your password"</string>
    <string name="recover_password_ok">"Your password has been sent to your e-mail address. Allright!"</string>
    <string name="error_login">"We find an error getting your user's data. Try again."</string>
    <string name="map_stations">"Map of stations"</string>
    <string name="map_dialog_title">"Loading..."</string>
    <string name="map_dialog_message">"Stealing stations' info"</string>
    <string name="menu_search">"Search"</string>
    <string name="settings">"Settings"</string>
    <string name="contact">"Contact"</string>
    <string name="preferences_general">"General"</string>
    <string name="preferences_unity">"Units"</string>
    <string name="screen_active">"Screen always on"</string>
    <string name="degrees_title">"Degrees"</string>
    <string name="degrees_summary">"Choose the temperature unit"</string>
    <string name="distance_title">"Metric"</string>
    <string name="distance_summary">"Choose the distance unit"</string>
    <string name="select_unity">"Choose your unit"</string>
    <string name="phone__mad_title">"Free call to this number from Madrid"</string>
    <string name="number_phone_mad">"010"</string>
    <string name="phone_out_mad_title">"Calls from out of Madrid"</string>
    <string name="number_phone_out_mad">"91 529 82 10"</string>
    <string name="presencial">"Face to face without previous appointment"</string>
    <string name="office_mad">"Madrid citizen attention office"</string>
    <string name="suggestions">"Suggestions or claims"</string>
    <string name="suggestions_mad">"madrid.es"</string>
    <string name="incidence">"Have you observed any incidence?"</string>
    <string name="incidence_text">"Report an incidence"</string>
    <string name="hint_name_incidence">"Introduce your name and surname"</string>
    <string name="hint_address_incidence">"Introduce the address of the incidence"</string>
    <string name="hint_station_incidence">"Station number"</string>
    <string name="hint_incidence">"Incidence"</string>
    <string name="hint_comments">"Comments"</string>
    <string name="incidence_title">"Incidences"</string>
    <string name="contact_title">"Contact"</string>
    <string name="error_no_name_incidence">"Introduce your name and surname"</string>
    <string name="error_no_address">"Introduce your address"</string>
    <string name="error_no_station">"Introduce number's station"</string>
    <string name="error_no_incidence">"Introduce your incidence's name"</string>
    <string name="error_no_comment">"Introduce your comment"</string>
    <string name="incidence_dialog_message">"Sending your incidence"</string>
    <string name="incidence_dialog_title">"Please wait..."</string>
    <string name="incidence_ok_title">"Great!"</string>
    <string name="incidence_ok_message">"We have sent your incidente to BiciMAD. You only need to pray and wait."</string>
    <string name="incidence_ko">"We can send your incidence to BiciMAD. Please try again."</string>
    <string name="preferences_session">"Session"</string>
    <string name="add_money">"Recharge money"</string>
    <string name="error_no_stations">"The stations can't be recovered. Please try again or do login"</string>
    <string name="about_us">"About us"</string>
    <string name="menu_logout">"Logout"</string>
    <string name="profile">"Profile"</string>
    <string name="logout_title">"Are you sure?"</string>
    <string name="logout_message">"Your data will be removed of the app"</string>
    <string name="profile_loading_message">"Removing your BiciMAD's data"</string>
    <string name="profile_loading_title">"Thinking..."</string>
    <string name="name_title">"Name"</string>
    <string name="email_title">"E-mail"</string>
    <string name="money_title">"Available balance"</string>
    <string name="no_money_showed">"Pick up your BiciMAD card"</string>
    <string name="change_password">"Change password"</string>
    <string name="change_password_instructions">"Introduce you old password and your new password in order to change your password in the BiciMAD's servers....maybe."</string>
    <string name="hint_old_password">"Introduce your old password"</string>
    <string name="hint_new_password">"Introduce a new password"</string>
    <string name="hint_repeat_password">"Repeat password"</string>
    <string name="send_password">"Send password"</string>
    <string name="change_message">"Sending your new password to BiciMAD"</string>
    <string name="change_title">"Changing..."</string>
    <string name="change_message_ok">"Your password has been changed with success"</string>
    <string name="change_title_ok">"Changed!"</string>
    <string name="error_not_equals">"The passwords don't match"</string>
    <string name="error_generic_send">"The information can't be send. Please try again"</string>
    <string name="no_change_password">"The password can't be changed, check your data and try again."</string>
    <string name="place_details"><![CDATA[<string name=\"place_details\">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="error_no_mic">"Your device does not support write by voice"</string>
    <string name="search_message">"Searching near BiciMAD stations"</string>
    <string name="search_title">"Are we lucky?"</string>
    <string name="error_no_dni">"Introduce your id number"</string>
    <string name="send_incidence">"Send incidence"</string>
    <string name="no_results_found">"D'oh! we have not found any result. Please try again"</string>
    <string name="no_results_init">"Write and send about the predictions to find your near stations"</string>
    <string name="bases">"Bases"</string>
    <string name="free_bases">"Free"</string>
    <string name="engaged_bikes">"Hooked"</string>
    <string name="no_search">"The search can\'t be done"</string>
    <string name="error_no_reload">"We can't get the stations!!"</string>
    <string name="activate_gps">"Activate your location, so we can show you the shortest way to your station"</string>
    <string name="about_us_text">"BiciMAD need a cool app to serve to their users. That is what we think. Give us your opinion."</string>
    <string name="about_us_title">"Why?"</string>
    <string name="register_not_working">"This functionality is not build for legal reasons"</string>
    <string name="bases_engaged">"Bikes"</string>
    <string name="bases_free">"Open space"</string>
    <string name="fav_station">"Favorite stations"</string>
    <string name="no_favorites">"You don't have any favorite stations. Add some from the detail of a station."</string>
    <string name="favorite_title">"Favorite stations"</string>
    <string name="error_get_station">"There is an error recovering the stations' data"</string>
    <string name="bicimad_use">"Introduce your BiciMAD account"</string>
    <string name="permission_location_title">"Location permission"</string>
    <string name="permission_location_text">"We need your location to know which are the stations closer to you"</string>
    <string name="permission_location_denied_feedback">"We need your location to make the best recomendations!!"</string>
    <string name="permission_rationale_settings_button_text">"SETTINGS"</string>
    <string name="no_location">"We can't get your location"</string>
    <string name="base_state">"Base status"</string>
    <string name="twitter_app_name" translatable="false">\@madbikeapp</string>
    <string name="news">News</string>
    <string name="tips">Tips</string>
    <string name="tips_title">Tips</string>
    <string name="info_title">News</string>
    <string name="no_tips">We are loading the tips, if you can\'t see anything, please try again</string>
    <string name="no_news">We are loading the news, if you can\'t see anything, please try again</string>
    <string name="enter_without_session">Enter without login</string>
    <string name="eco">EcoMADBike</string>
    <string name="eco_title">EcoMADBike</string>
    <string name="no_eco">We are loading the news, if you can\\\'t see anything, please try again</string>
    <string name="air">Air Quality</string>
    <string name="air_title">Air Quality</string>
    <string name="pollution_title">Please wait...</string>
    <string name="pollution_message">Getting some info about pollution</string>
    <string name="pollution_error">Sorry! We\'ve found an error loading the info, try to refresh the section!</string>
    <string name="level_1">Green level</string>
    <string name="level_2">Yellow level</string>
    <string name="level_3">Orange level</string>
    <string name="level_4">Red level</string>
    <string name="permission_camera_title">Camera permission</string>
    <string name="permission_advise_title">Advise permissions</string>
    <string name="push_important_info">Important information about MADBike</string>
    <string name="push_unavailable">Unavailable stations</string>
    <string name="push_available">Available stations</string>
    <string name="push_new_stations">New stations</string>
    <string name="push_air_quality_alerts">Air Quality alerts</string>
    <string name="preferences_pushes">Push notifications</string>
    <string name="proposals">Proposals</string>
</resources>